# abcdef

si-test-idcevo/: .gitignore  .lfsconfig  .yamllint  CODEOWNERS  README.md  pins_and_versions.md  pyproject.toml  tox.ini
si-test-idcevo/.github/: pull_request_template.md
si-test-idcevo/docs/: Makefile  conf.py  index.rst  module2_tests.py  requirements-docs.txt
si-test-idcevo/grafanas/: README.md  android-ui-performance.json  deprecated-idcevo-si-android-performance-monitor.json  deprecated-idcevo-si-node0-performance-monitor.json  idcevo-application-start-time.json  idcevo-boot-kpis.json  idcevo-generic-performance-kpis-reboots.json  idcevo-generic-performance-kpis.json  idcevo-other-performance-kpis.json  idcevo-si-android-performance-monitor-v2.json  idcevo-si-node0-performance-monitor-v2.json  str-performance-generic-kpis.json  str-performance.json  traas-vs-farm-generic-performance-kpis-reboots.json  wip-idc-evo-staging.json
si-test-idcevo/playbooks/: check_nightly_post_tag.yaml  dlt_timestamp.yaml  filter-tee-xml-reporting.yaml  run_test_summarizer.yaml  split_and_compress.yaml  validate_gl_version.yaml
si-test-idcevo/playbooks/build-tee-test-config/: read_pins_from_pr_fields.yaml  si-test-run-build-tee.yaml
si-test-idcevo/playbooks/documentation/: build-and-push-documentation.yaml  build-documentation.yaml
si-test-idcevo/playbooks/reporting/: collect-build-env-traas.yaml  (+4 more)
si-test-idcevo/scripts/: validate_config_files.py  validate_know_issues_json.py  validate_test_classes.py  validate_test_suites.py
si-test-idcevo/si_test_idcevo/: __init__.py
(+796 files in other folders)
